[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Somesh Fengade <someshfengde@gmail.com>"]
readme = "README.md"
package-mode = false 

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.30.5"
fastapi = "^0.111.0"
python-multipart = "^0.0.9"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
